# SMTH-NGA

./: .gitignore  Cargo.toml  README.md  TODO.md
script/: NGA CheckIn Stats.js
src/: main.rs  util.rs
