[package]
name = "smth_nga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

regex = { version = "1", default-features = false, features = ["std"] }

csv = "1"
scraper = "0.18.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
words-count = "0.1.6"
once_cell = "1.18.0"
anyhow = "1.0.75"


[build-dependencies]
embed-resource = "2"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
